--- a/index.html
+++ b/index.html
@@ -1051,7 +1051,8 @@ Have fun with STONKS and become part of a movement that challenges traditional f
             id="w-node-_3b4e862a-12ea-e5e7-1f86-03c79f0a8498-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 100vw, 60px" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 822w"
                 class="win-icon handle" />
             <p class="icon-text">Coingecko.exe</p>
-            </a><a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a>
+            </a>
+            <!-- <a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a> -->
             <a
                 id="w-node-_42c4ac90-e262-261f-d3da-3a28cca4e7f9-fa5940a2" href="https://twitter.com/" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2" />
                 <p class="icon-text">X.HTML</p>
