--- a/index.html
+++ b/index.html
@@ -1052,7 +1052,7 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                 class="win-icon handle" />
             <p class="icon-text">Coingecko.exe</p>
             </a>
-            <!-- <a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a> -->
+            <a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a>
             <a
                 id="w-node-_42c4ac90-e262-261f-d3da-3a28cca4e7f9-fa5940a2" href="https://twitter.com/" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2" />
                 <p class="icon-text">X.HTML</p>
@@ -1118,7 +1118,7 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                              -->
                             <a id="w-node-e3e08639-54a1-ce20-2777-039e5b725bbe-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 822w" class="win-icon handle"/><p class="icon-text">Coingecko.exe</p></a>
                             <a
-                                id="w-node-_7a4c4d3d-5895-f5e0-7a76-10ea9de23e72-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d89526416ba85d7e025e0c_photo_2024-02-05_23-52-27-p-500.png 500w, https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d89526416ba85d7e025e0c_photo_2024-02-05_23-52-27-p-800.png 800w, https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d89526416ba85d7e025e0c_photo_2024-02-05_23-52-27-p-1080.png 1080w, stock.png 1402w"
+                                id="w-node-_7a4c4d3d-5895-f5e0-7a76-10ea9de23e72-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 1080w, stock.png 1402w"
                                     class="win-icon handle" />
                                 <p class="icon-text">BUY STONKS.EXE</p>
                                 </a>
