--- a/index.html
+++ b/index.html
@@ -4,18 +4,10 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>STONKS — The First Original Dawg of Avalanche</title>
-    <meta content="The Husky token is a community-driven token native to the Avalanche blockchain. It was stealth-launched on May the 12th of 2021 with locked liquidity, a hard-capped supply, no team allocation, and no mint function. It serves as the backbone of the Husky project, supporting real-world merchandise, NFT collections, and more."
+    <title>STONKS </title>
+    <meta content="Stank Meme with the ticker symbol STONKS, is a revolutionary cryptocurrency that blends the raw, unfiltered humor of stank memes with the satirical financial wisdom of the 'Stonks' meme."
         name="description" />
-    <meta content="STONKS — The First Original Dawg of Avalanche" property="og:title" />
-    <meta content="The Husky token is a community-driven token native to the Avalanche blockchain. It was stealth-launched on May the 12th of 2021 with locked liquidity, a hard-capped supply, no team allocation, and no mint function. It serves as the backbone of the Husky project, supporting real-world merchandise, NFT collections, and more."
-        property="og:description" />
-    <meta content="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d7d2e889730e882263d6c3_husky-1.webp" property="og:image" />
-    <meta content="STONKS — The First Original Dawg of Avalanche" property="twitter:title" />
-    <meta content="The Husky token is a community-driven token native to the Avalanche blockchain. It was stealth-launched on May the 12th of 2021 with locked liquidity, a hard-capped supply, no team allocation, and no mint function. It serves as the backbone of the Husky project, supporting real-world merchandise, NFT collections, and more."
-        property="twitter:description" />
-    <meta content="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d7d2e889730e882263d6c3_husky-1.webp" property="twitter:image" />
-    <meta property="og:type" content="website" />
+ 
     <meta content="summary_large_image" name="twitter:card" />
     <meta content="width=device-width, initial-scale=1" name="viewport" />
     <link href="style.css" rel="stylesheet" type="text/css" />
@@ -73,8 +65,7 @@
             n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
         }(window, document);
     </script>
-    <link href="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d526750ec2ac86ea0ce28c_favicon-v3-husky.png" rel="shortcut icon" type="image/x-icon" />
-    <link href="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d5267e74104048c9bab340_webclip-v3-husky%20(1).png" rel="apple-touch-icon" />
+    <link rel="shortcut icon" href="hero.png" type="image/x-icon">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
 
     <script type="application/ld+json">
