--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html> -->
 <!-- Last Published: Wed Apr 10 2024 23:16:47 GMT+0000 (Coordinated Universal Time) -->
 <html data-wf-domain="www.husky.space" data-wf-page="65da0cafa7d31fb5fa5940a2" data-wf-site="62e0ff840baace1b07ba0e4f" lang="en">
 
@@ -1038,11 +1038,11 @@ Have fun with STONKS and become part of a movement that challenges traditional f
         </div>
     </div>
     <div id="contain" data-w-id="4e143eeb-7f4a-918a-70bb-4c99bc2ce0c9" class="desktop w-hidden-medium w-hidden-small w-hidden-tiny"><a id="w-node-_911b49d6-ea40-36b6-c34d-ca2528396137-fa5940a2" data-w-id="911b49d6-ea40-36b6-c34d-ca2528396137" href="#" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 100vw, 60px" alt="" srcset="stock.png 500w, stock.png 512w" class="win-icon handle"/><p class="icon-text">Readme.txt</p></a>
-        <a
+        <!-- <a
             id="w-node-_3b4e862a-12ea-e5e7-1f86-03c79f0a8498-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 100vw, 60px" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 822w"
                 class="win-icon handle" />
             <p class="icon-text">Coingecko.exe</p>
-            </a>
+            </a> -->
             <a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a>
             <a
                 id="w-node-_42c4ac90-e262-261f-d3da-3a28cca4e7f9-fa5940a2" href="https://twitter.com/" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2" />
@@ -1107,7 +1107,8 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                             <p class="icon-text">TRASH</p>
                             </a>
                              -->
-                            <a id="w-node-e3e08639-54a1-ce20-2777-039e5b725bbe-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 822w" class="win-icon handle"/><p class="icon-text">Coingecko.exe</p></a>
+                            <!-- <a id="w-node-e3e08639-54a1-ce20-2777-039e5b725bbe-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 822w" class="win-icon handle"/><p class="icon-text">Coingecko.exe</p></a>
+                          -->
                             <a
                                 id="w-node-_7a4c4d3d-5895-f5e0-7a76-10ea9de23e72-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" width="Auto" height="Auto" sizes="(max-width: 991px) 60px, 100vw" alt="" srcset="stock.png 500w, stock.png 800w, stock.png 1080w, stock.png 1402w"
                                     class="win-icon handle" />
