--- a/index.html
+++ b/index.html
@@ -1031,7 +1031,7 @@ Have fun with STONKS and become part of a movement that challenges traditional f
         </a>
         <div class="clock-2">
             <div class="flex-h"><a href="https://t.co/" target="_blank" class="w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d720d339f549e9be698efb_telegram-logo-pixel.png" alt="" class="image-6"/></a><a href="https://t.co/TGzuRSf9Vh"
-                    target="_blank" class="w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71deffc33dbbb24b85c16_logo-discord-pixel.png" alt="" class="image-6"/></a><a href="https://twitter.com/" target="_blank"
+                    target="_blank" class="w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71deffc33dbbb24b85c16_logo-discord-pixel.png" alt="" class="image-6"/></a><a href="HTTPS://X.com/stonksmemecto" target="_blank"
                     class="link-block w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" alt="" class="image-6"/></a>
                 <h6 class="hack23-time-version2 hide">STONKS</h6>
             </div>
@@ -1045,14 +1045,14 @@ Have fun with STONKS and become part of a movement that challenges traditional f
             </a> -->
             <a id="w-node-_79679af2-ff8f-8948-fd6c-f1c4dd1cc858-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="stock.png" class="win-icon handle"/><p class="icon-text">BUY STONKS.EXE</p></a>
             <a
-                id="w-node-_42c4ac90-e262-261f-d3da-3a28cca4e7f9-fa5940a2" href="https://twitter.com/" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2" />
+                id="w-node-_42c4ac90-e262-261f-d3da-3a28cca4e7f9-fa5940a2" href="HTTPS://X.com/stonksmemecto" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2" />
                 <p class="icon-text">X.HTML</p>
                 </a>
                 
                 <!-- <a id="w-node-cf9adce2-3ab8-0308-3d0b-81e6b11740b2-fa5940a2" data-w-id="cf9adce2-3ab8-0308-3d0b-81e6b11740b2" href="#" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube.png" width="10" height="Auto" sizes="(max-width: 991px) 100vw, 35px" alt="" srcset="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube-p-500.png 500w, https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube.png 688w" class="win-icon handle small x2"/><p class="icon-text">HUSkytube.EXE</p></a>
                  -->
                 <a
-                    id="w-node-fa4deacf-3362-9193-6a55-654a6f8eb513-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="https://cdn.worldvectorlogo.com/logos/dextools.svg" width="Auto" height="Auto" alt="" class="win-icon handle small" />
+                    id="w-node-fa4deacf-3362-9193-6a55-654a6f8eb513-fa5940a2" href="https://www.dextools.io/app/en/solana/pair-explorer/88XhPR2xmJMxCMQKbGkMGtmdUD8iqJiYKhF9DKZgZwrG?t=1718638343852" target="_blank" class="icon-block draggable w-inline-block"><img src="https://cdn.worldvectorlogo.com/logos/dextools.svg" width="Auto" height="Auto" alt="" class="win-icon handle small" />
                     <p class="icon-text">Dextools.exe</p>
                     <p class="icon-text tag">OPEN</p>
                     </a>
@@ -1077,14 +1077,14 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                                 <p class="icon-text">TRASH</p>
                                 </a> -->
     </div>
-    <div class="mobile"><a id="w-node-e47fd2c7-f5f1-bb64-9363-93c3c7cabebf-fa5940a2" href="https://twitter.com/" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2"/><p class="icon-text">X.HTML</p></a>
+    <div class="mobile"><a id="w-node-e47fd2c7-f5f1-bb64-9363-93c3c7cabebf-fa5940a2" href="HTTPS://X.com/stonksmemecto" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="10" height="Auto" alt="" class="win-icon handle small x2"/><p class="icon-text">X.HTML</p></a>
         <!-- <a
             id="w-node-bf96e1ec-6b69-bce2-ed91-828e613f18ff-fa5940a2" data-w-id="bf96e1ec-6b69-bce2-ed91-828e613f18ff" href="#" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube.png" width="10" height="Auto" sizes="(max-width: 991px) 35px, 100vw" alt="" srcset="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube-p-500.png 500w, https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/661712e5d78e7b4a0615467c_HuskyTube.png 688w"
                 class="win-icon handle small x2" />
             <p class="icon-text">HUSkytube.EXE</p>
             </a>
              -->
-            <a id="w-node-_9ff49ee7-9df5-3515-58d0-d6f006c50544-fa5940a2" href="" target="_blank" class="icon-block draggable w-inline-block"><img src="https://cdn.worldvectorlogo.com/logos/dextools.svg" width="Auto" height="Auto" alt="" class="win-icon handle small"/><p class="icon-text">Dextools.exe</p><p class="icon-text tag">OPEN</p></a>
+            <a id="w-node-_9ff49ee7-9df5-3515-58d0-d6f006c50544-fa5940a2" href="https://www.dextools.io/app/en/solana/pair-explorer/88XhPR2xmJMxCMQKbGkMGtmdUD8iqJiYKhF9DKZgZwrG?t=1718638343852" target="_blank" class="icon-block draggable w-inline-block"><img src="https://cdn.worldvectorlogo.com/logos/dextools.svg" width="Auto" height="Auto" alt="" class="win-icon handle small"/><p class="icon-text">Dextools.exe</p><p class="icon-text tag">OPEN</p></a>
             <!-- <a
                 id="w-node-b947a6b3-bdef-9899-96d7-0199b114b897-fa5940a2" href="https://t.co/TGzuRSf9Vh" target="_blank" class="icon-block draggable w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d7aa472eb7902672bde79e_discord-pixel.png" alt="" height="" width="50" class="win-icon handle small" />
                 <p class="icon-text">DISCORD.HTML</p>
@@ -1141,7 +1141,7 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                     <!-- <div class="menu-item-block tab hide"><a data-w-id="b86f5178-b0be-8830-33e4-3745cde2903b" href="https://discord.gg/BCJm2B3UGD" target="_blank" class="menu-item-block second tab w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/62e156543dc201ca43f3cf08_discord.webp" width="44" height="" alt="" class="hop"/><div style="color:rgb(0,0,0)" class="menu-item-text"><span class="underline">D</span>iscord</div></a></div>
                   -->
                     <div
-                        class="menu-item-block tab"><a data-w-id="b86f5178-b0be-8830-33e4-3745cde29042" href="https://twitter.com/" target="_blank" class="menu-item-block second tab w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="44" height="" alt="" class="hop small"/><div style="color:rgb(0,0,0)" class="menu-item-text"><span class="underline">T</span>witter</div></a></div>
+                        class="menu-item-block tab"><a data-w-id="b86f5178-b0be-8830-33e4-3745cde29042" href="HTTPS://X.com/stonksmemecto" target="_blank" class="menu-item-block second tab w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/65d71d53b566b4f91fb8adbc_logo-x-twitter.png" width="44" height="" alt="" class="hop small"/><div style="color:rgb(0,0,0)" class="menu-item-text"><span class="underline">T</span>witter</div></a></div>
             </nav>
     </div><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/62e0ff840baacec079ba0e63_ic-arrow.png" width="4" height="7" style="display:block" alt="" data-w-id="b86f5178-b0be-8830-33e4-3745cde2905d" class="icon-arrow-black" /><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/62e0ff840baace836cba0e72_ic-arrow-hover.png"
         width="4" height="7" style="display:none" alt="" data-w-id="b86f5178-b0be-8830-33e4-3745cde2905e" class="icon-arrow-white" /></div>
