--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Have fun with STONKS and become part of a movement that challenges traditional f
                         href="#" class="minimize-icon w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/62e0ff840baace9663ba0e5f_ic-minimize.png" alt="" class="minimize" /></a><a data-w-id="c403365c-671d-f9b8-f723-32775af32683" href="#" class="bigger-icon w-inline-block"><img src="https://assets-global.website-files.com/62e0ff840baace1b07ba0e4f/62e0ff840baace9a77ba0e85_ic-fullscreen.png" alt="" class="fullscreen"/></a></div>
                 <div
                     class="win-top-bar handle">
-                    <div class="win-title">STONKS - Huskytube</div>
+                    <div class="win-title">STONKS </div>
             </div>
             <div class="win-content-outer-frame">
                 <div class="win-content-inner-frame">
